--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -66,4 +66,8 @@
   text-decoration: none;
   position: relative;
   z-index: 30;
+  display: none;
+  @include respond(tab-port) {
+    display: block;
+  }
 }
